--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
 		"react-toggle-button": "^2.2.0",
+		"react-transition-group": "^4.3.0",
 		"redux": "^4.0.5",
 		"styled-components": "^5.0.1"
 	},
