--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   },
   "globals": {
     "window": true,
-    "document": true
+    "document": true,
+    "fetch": false
   },
   "rules": {
     "react/state-in-constructor": [0, "always"],
