--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-	"name": "tapety",
-	"version": "0.1.0",
+	"name": "portfolio",
+	"version": "2.0.0",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"eslint": "^6.8.0",
-		"eslint-config-airbnb": "^18.1.0",
-		"eslint-plugin-import": "^2.20.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.19.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.26.1",
 		"eslint-plugin-react-hooks": "^3.0.0",
-		"formik": "^2.1.4",
+		"formik": "^2.2.9",
 		"prop-types": "^15.7.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-redux": "^7.2.0",
-		"react-router-dom": "^5.1.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.5",
+		"react-router-dom": "^5.3.0",
 		"react-scripts": "3.4.1",
 		"react-toggle-button": "^2.2.0",
-		"react-transition-group": "^4.3.0",
-		"redux": "^4.0.5",
-		"styled-components": "^5.0.1"
+		"react-transition-group": "^4.4.2",
+		"redux": "^4.1.1",
+		"styled-components": "^5.3.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -44,7 +44,7 @@
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
-		"eslint-config-prettier": "^6.10.1",
-		"prettier": "^2.0.2"
+		"eslint-config-prettier": "^6.15.0",
+		"prettier": "^2.4.1"
 	}
 }
