Installed typescript and configured tsconfig.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".js"]
+        "extensions": [".js", ".ts", ".tsx"]
       }
     ]
   }
