--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-toggle-button": "^2.2.0",
 		"react-transition-group": "^4.4.2",
 		"redux": "^4.1.1",
+		"strip-ansi": "^7.0.1",
 		"styled-components": "^5.3.3"
 	},
 	"scripts": {
@@ -43,8 +44,13 @@
 		]
 	},
 	"devDependencies": {
+		"@types/jest": "^27.0.2",
+		"@types/node": "^16.11.4",
+		"@types/react": "^17.0.32",
+		"@types/react-dom": "^17.0.10",
 		"babel-eslint": "^10.1.0",
 		"eslint-config-prettier": "^6.15.0",
-		"prettier": "^2.4.1"
+		"prettier": "^2.4.1",
+		"typescript": "^4.4.4"
 	}
 }
