--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,19 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
-  "parser": "babel-eslint",
+  "extends": [
+    "airbnb",
+    "prettier",
+    "prettier/react",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "env": {
-    "jest": true
+    "jest": true,
+    "node": true,
+    "es6": true
   },
   "globals": {
     "window": true,
@@ -10,12 +21,41 @@
     "fetch": false
   },
   "rules": {
-    "react/state-in-constructor": [0, "always"],
-    "import/prefer-default-export": 0,
-    "react/jsx-filename-extension": [
-      1,
+    "@typescript-eslint/no-var-requires": "warn",
+    "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/naming-convention": [
+      "warn",
       {
-        "extensions": [".js", ".ts", ".tsx"]
+        "selector": "variable",
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+      }
+    ],
+    "@typescript-eslint/no-use-before-define": "warn",
+    "@typescript-eslint/prefer-regexp-exec": "warn",
+    "@typescript-eslint/unbound-method": "warn",
+    "@typescript-eslint/no-misused-promises": "warn",
+    "@typescript-eslint/require-await": "warn",
+    "@typescript-eslint/await-thenable": "warn",
+    "@typescript-eslint/no-unsafe-member-access": "warn",
+    "@typescript-eslint/no-unsafe-return": "warn",
+    "@typescript-eslint/no-unsafe-assignment": "warn",
+    "@typescript-eslint/no-unsafe-call": "warn",
+    "@typescript-eslint/no-floating-promises": "warn",
+    "@typescript-eslint/restrict-plus-operands": "warn",
+    "@typescript-eslint/restrict-template-expressions": "warn",
+    "react/no-unescaped-entities": "warn",
+    "no-useless-escape": "warn",
+    "react-hooks/rules-of-hooks": "warn",
+    "jsx-a11y/media-has-caption": "warn",
+    "react/jsx-no-target-blank": "warn",
+    "no-case-declarations": "warn",
+    "prettier/prettier": [
+      "error",
+      {
+        "semi": false
       }
     ]
   }
