--- a/package.json
+++ b/package.json
@@ -44,10 +44,16 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/react-hooks": "^7.0.2",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.4",
 		"@types/react": "^17.0.32",
 		"@types/react-dom": "^17.0.10",
+		"@types/react-router-dom": "^5.3.1",
+		"@types/react-transition-group": "^4.4.4",
+		"@types/styled-components": "^5.1.15",
+		"@typescript-eslint/eslint-plugin": "^5.1.0",
+		"@typescript-eslint/parser": "^5.1.0",
 		"babel-eslint": "^10.1.0",
 		"eslint-config-prettier": "^6.15.0",
 		"prettier": "^2.4.1",
