--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "allowSyntheticDefaultImports": true
   },
   "exclude": ["./node_modules"],
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "./all.d.ts"]
 }
