--- a/package.json
+++ b/package.json
@@ -1,62 +1,62 @@
 {
-	"name": "portfolio",
-	"version": "2.0.0",
-	"private": true,
-	"dependencies": {
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"eslint": "^6.8.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.26.1",
-		"eslint-plugin-react-hooks": "^3.0.0",
-		"formik": "^2.2.9",
-		"prop-types": "^15.7.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-redux": "^7.2.5",
-		"react-router-dom": "^5.3.0",
-		"react-scripts": "3.4.1",
-		"react-toggle-button": "^2.2.0",
-		"react-transition-group": "^4.4.2",
-		"redux": "^4.1.1",
-		"strip-ansi": "^7.0.1",
-		"styled-components": "^5.3.3"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@testing-library/react-hooks": "^7.0.2",
-		"@types/jest": "^27.0.2",
-		"@types/node": "^16.11.4",
-		"@types/react": "^17.0.32",
-		"@types/react-dom": "^17.0.10",
-		"@types/react-router-dom": "^5.3.1",
-		"@types/react-transition-group": "^4.4.4",
-		"@types/styled-components": "^5.1.15",
-		"@typescript-eslint/eslint-plugin": "^5.1.0",
-		"@typescript-eslint/parser": "^5.1.0",
-		"babel-eslint": "^10.1.0",
-		"eslint-config-prettier": "^6.15.0",
-		"prettier": "^2.4.1",
-		"typescript": "^4.4.4"
-	}
+  "name": "portfolio",
+  "version": "2.0.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "formik": "^2.2.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "3.4.1",
+    "react-toggle-button": "^2.2.0",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.1",
+    "strip-ansi": "^7.0.1",
+    "styled-components": "^5.3.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "type-check": "tsc --noEmit"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
+  }
 }
