--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "es2019"],
+    "jsx": "react-jsx",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "es2019"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -20,6 +24,12 @@
     "target": "esnext",
     "allowSyntheticDefaultImports": true
   },
-  "exclude": ["./node_modules"],
-  "include": ["src/**/*", "./all.d.ts"]
+  "exclude": [
+    "./node_modules"
+  ],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "./all.d.ts"
+  ]
 }
