--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es2019"
-    ],
+    "lib": ["dom", "dom.iterable", "es2019"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -24,12 +20,6 @@
     "target": "esnext",
     "allowSyntheticDefaultImports": true
   },
-  "exclude": [
-    "./node_modules"
-  ],
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "./all.d.ts"
-  ]
+  "exclude": ["./node_modules"],
+  "include": ["**/*.ts", "**/*.tsx", "./all.d.ts"]
 }
