--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,14 +10,14 @@ jobs:
         run: npm ci
       - name: "Lint"
         run: npm run lint
-      - name: "Test with coverage"
-        uses: paambaati/codeclimate-action@v2.7.5
-        env:
-          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-        with:
-          coverageCommand: npm run test -- --coverage
-          coverageLocations: |
-            ${{github.workspace}}/coverage/lcov.info:lcov
+      # - name: "Test with coverage"
+      #   uses: paambaati/codeclimate-action@v2.7.5
+      #   env:
+      #     CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+      #   with:
+      #     coverageCommand: npm run test -- --coverage
+      #     coverageLocations: |
+      #       ${{github.workspace}}/coverage/lcov.info:lcov
       - name: Codecov
         uses: codecov/codecov-action@v1.2.1
         with:
