--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -5,7 +5,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@master
       - name: "Install dependencies"
         run: npm ci
       - name: "Lint"
@@ -18,8 +18,10 @@ jobs:
       #     coverageCommand: npm run test -- --coverage
       #     coverageLocations: |
       #       ${{github.workspace}}/coverage/lcov.info:lcov
+      - name: Coverage
+        run: npm run coverage
       - name: Codecov
-        uses: codecov/codecov-action@v1.2.1
+        uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           directory: ./coverage
