--- a/codecov.yml
+++ b/codecov.yml
@@ -2,3 +2,5 @@ ignore:
   - "**/*.styled.ts"
   - "src/theme/global-style.ts"
   - "src/store/index.ts"
+  - "src/index.tsx"
+  - "src/serviceWorker.js"
