--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^4.0.3",
     "react-toggle-button": "^2.2.0",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "strip-ansi": "^7.0.1",
     "styled-components": "^5.3.3"
   },
@@ -54,6 +55,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.2",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
